fix(icon): resolve vertical align problem

--- a/src/icon/icon.less
+++ b/src/icon/icon.less
@@ -21,6 +21,7 @@
   text-transform: none;
   line-height: 1;
   text-align: center;
+  display: block;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
